CMAKE_MINIMUM_REQUIRED(VERSION 3.7.0 FATAL_ERROR)

PROJECT(RT)

SET(EXE_NAME "RT")

ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244")

SET(SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")

FILE(GLOB_RECURSE SOURCES_FILES "${SOURCES_DIR}/*.cpp")
FILE(GLOB_RECURSE HEADERS_FILES "${SOURCES_DIR}/*.h")

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
)

LINK_DIRECTORIES(
)

ADD_EXECUTABLE(${EXE_NAME}
	${SOURCES_FILES}
	${HEADERS_FILES}
)

TARGET_LINK_LIBRARIES(${EXE_NAME}
	PUBLIC
)

SET_TARGET_PROPERTIES(${EXE_NAME}
  PROPERTIES
  LINK_FLAGS "/ignore:4244")

# COMPILER FLAGS
IF(MSVC)
  OPTION(MSVC_STATIC_RUNTIME "Link static runtime libraries" OFF)
  IF(MSVC_STATIC_RUNTIME)
    FOREACH(flagVariable CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELWITHDEBINFO)
      IF(${flagVariable} MATCHES "/MD")
        STRING(REGEX REPLACE "/MD" "/MT" ${flagVariable} "${${flagVariable}}")
      ENDIF(${flagVariable} MATCHES "/MD")
    ENDFOREACH(flagVariable CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELWITHDEBINFO)
  ENDIF(MSVC_STATIC_RUNTIME)
ENDIF(MSVC)